--- a/scs-telemetry/scs-telemetry.vcxproj.filters
+++ b/scs-telemetry/scs-telemetry.vcxproj.filters
@@ -15,16 +15,30 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\scs_config_handlers.cpp">
+    <ClInclude Include="inc\log.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\scs_config_handlers.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\scs-telemetry-common.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\sharedmemory.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\sharedmemory.cpp">
+    <ClCompile Include="src\scs_config_handlers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\scs_telemetry.cpp">
+    <ClCompile Include="src\scs_telemetry.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\log.cpp">
+    <ClCompile Include="src\sharedmemory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
