Remove nested classes and types

--- a/scs-client/C#/SCSSdkClient/SCSSdkClient.csproj
+++ b/scs-client/C#/SCSSdkClient/SCSSdkClient.csproj
@@ -51,33 +51,50 @@
     <Compile Include="AuxLevel.cs" />
     <Compile Include="Extension.cs" />
     <Compile Include="Log.cs" />
-    <Compile Include="Object\SCSTelemetry.Methods.cs" />
-    <Compile Include="Object\SCSTelemetry.Substance.cs" />
-    <Compile Include="Object\SCSTelemetry.Wheels.cs" />
+    <Compile Include="Object\Acceleration.cs" />
+    <Compile Include="Object\control\Game.cs" />
+    <Compile Include="Object\control\Input.cs" />
+    <Compile Include="Object\DPlacement.cs" />
+    <Compile Include="Object\job\Cargo.cs" />
+    <Compile Include="Object\job\Job.cs" />
+    <Compile Include="Object\Substance.cs" />
+    <Compile Include="Object\trailer\Wheels.cs" />
+    <Compile Include="Object\truck\constants\Capacity.cs" />
+    <Compile Include="Object\truck\constants\Motor.cs" />
+    <Compile Include="Object\truck\constants\WarningFactor.cs" />
+    <Compile Include="Object\WheelsConstants.cs" />
+    <Compile Include="Object\truck\current\TruckAcceleration.cs" />
+    <Compile Include="Object\truck\current\Brakes.cs" />
+    <Compile Include="Object\truck\current\Damage.cs" />
+    <Compile Include="Object\truck\current\dashboard\Dashboard.cs" />
+    <Compile Include="Object\truck\current\dashboard\Fuel.cs" />
+    <Compile Include="Object\truck\current\dashboard\Warnings.cs" />
+    <Compile Include="Object\truck\current\Gear.cs" />
+    <Compile Include="Object\truck\current\Lights.cs" />
+    <Compile Include="Object\truck\current\Motor.cs" />
+    <Compile Include="Object\truck\current\Wheels.cs" />
     <Compile Include="SCSGame.cs" />
     <Compile Include="SCSSdkConvert.cs" />
     <Compile Include="SCSSdkTelemetry.cs" />
-    <Compile Include="Object\SCSTelemetry.Common.cs" />
-    <Compile Include="Object\SCSTelemetry.Control.cs" />
+    <Compile Include="Object\Common.cs" />
+    <Compile Include="Object\control\Control.cs" />
     <Compile Include="Object\SCSTelemetry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Object\SCSTelemetry.DPlacement.cs" />
-    <Compile Include="Object\SCSTelemetry.DVector.cs" />
-    <Compile Include="Object\SCSTelemetry.Euler.cs" />
-    <Compile Include="Object\SCSTelemetry.FPlacement.cs" />
-    <Compile Include="Object\SCSTelemetry.Frequency.cs" />
-    <Compile Include="Object\SCSTelemetry.FVector.cs" />
-    <Compile Include="Object\SCSTelemetry.Job.cs" />
-    <Compile Include="Object\SCSTelemetry.Movement.cs" />
-    <Compile Include="Object\SCSTelemetry.Navigation.cs" />
-    <Compile Include="Object\SCSTelemetry.Truck.Position.cs" />
-    <Compile Include="Object\SCSTelemetry.SpecialEvents.cs" />
-    <Compile Include="Object\SCSTelemetry.Time.cs" />
-    <Compile Include="Object\SCSTelemetry.Trailer.cs" />
-    <Compile Include="Object\SCSTelemetry.Truck.Constants.cs" />
-    <Compile Include="Object\SCSTelemetry.Truck.cs" />
-    <Compile Include="Object\SCSTelemetry.Truck.Current.cs" />
-    <Compile Include="Object\SCSTelemetry.Version.cs" />
+    <Compile Include="Object\DVector.cs" />
+    <Compile Include="Object\Euler.cs" />
+    <Compile Include="Object\FPlacement.cs" />
+    <Compile Include="Object\Frequency.cs" />
+    <Compile Include="Object\FVector.cs" />
+    <Compile Include="Object\Movement.cs" />
+    <Compile Include="Object\Navigation.cs" />
+    <Compile Include="Object\truck\PositionData.cs" />
+    <Compile Include="Object\SpecialEvents.cs" />
+    <Compile Include="Object\Time.cs" />
+    <Compile Include="Object\trailer\Trailer.cs" />
+    <Compile Include="Object\truck\constants\Constants.cs" />
+    <Compile Include="Object\truck\Truck.cs" />
+    <Compile Include="Object\truck\current\Current.cs" />
+    <Compile Include="Object\Version.cs" />
     <Compile Include="SharedMemory.cs" />
     <Compile Include="ShifterType.cs" />
   </ItemGroup>
