--- a/scs-client/C#/SCSSdkClient.Demo/SCSSdkClient.Demo.csproj
+++ b/scs-client/C#/SCSSdkClient.Demo/SCSSdkClient.Demo.csproj
@@ -35,8 +35,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Sharpbrake.Client, Version=5.0.5.0, Culture=neutral, PublicKeyToken=c5537f4669e4dbaa, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Sharpbrake.Client.5.0.5\lib\net452\Sharpbrake.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="Sharpbrake.Log4net, Version=2.0.5.0, Culture=neutral, PublicKeyToken=c5537f4669e4dbaa, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Sharpbrake.Log4net.2.0.5\lib\net452\Sharpbrake.Log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
