--- a/scs-client/C#/SCSSdkClient.Demo/log4net.config
+++ b/scs-client/C#/SCSSdkClient.Demo/log4net.config
@@ -11,7 +11,7 @@
     </layout>
   </appender>
   <appender name="file" type="log4net.Appender.RollingFileAppender">
-    <file value="SCSSdkClient.log" />
+    <file value="SCSSdkClient.Demo.log" />
     <appendToFile value="true" />
     <rollingStyle value="Size" />
     <maxSizeRollBackups value="5" />
@@ -22,7 +22,6 @@
     </layout>
   </appender>
   <appender name="airbrake" type="Sharpbrake.Log4net.AirbrakeAppender, Sharpbrake.Log4net">
-    <Environment value="SCSSdkClient" />
     <ProjectKey value="75475da09743d0407cf2fc08cb3efef3" />
     <ProjectId value="220277" />
     <filter type="log4net.Filter.LevelRangeFilter">
