--- a/scs-client/C#/SCSSdkClient.Demo/log4net.config
+++ b/scs-client/C#/SCSSdkClient.Demo/log4net.config
@@ -1,32 +1,17 @@
 ﻿<log4net>
   <root>
     <level value="ALL" />
-    <appender-ref ref="console" />
     <appender-ref ref="file" />
-    <appender-ref ref="airbrake" />
   </root>
-  <appender name="console" type="log4net.Appender.ConsoleAppender">
-    <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date %level %logger - %message%newline" />
-    </layout>
-  </appender>
   <appender name="file" type="log4net.Appender.RollingFileAppender">
     <file value="SCSSdkClient.Demo.log" />
     <appendToFile value="true" />
-    <rollingStyle value="Size" />
-    <maxSizeRollBackups value="5" />
+    <rollingStyle value="Composite" />
+    <datePattern value="yyyyMMdd" />
+    <maxSizeRollBackups value="10" />
     <maximumFileSize value="10MB" />
-    <staticLogFileName value="true" />
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+      <conversionPattern value="%date %-5level [%thread] %logger - %message%newline" />
     </layout>
-  </appender>
-  <appender name="airbrake" type="Sharpbrake.Log4net.AirbrakeAppender, Sharpbrake.Log4net">
-    <ProjectKey value="75475da09743d0407cf2fc08cb3efef3" />
-    <ProjectId value="220277" />
-    <filter type="log4net.Filter.LevelRangeFilter">
-      <levelMin value="ERROR" />
-      <levelMax value="FATAL" />
-    </filter>
   </appender>
 </log4net>
